# facere-sensum

./: .coveragerc  README.md  auth.json  config.json  fsy.py  log.csv  pyproject.toml  requirements.txt
.github/workflows/: doc.yaml  lints.yaml  test.yaml
doc/: SEO-hierarchy.pptx  conf.py  examples.rst  features.rst  glossary.rst  index.rst  installation.rst  intro.rst  sources.rst
examples/: config_customsearch.json  config_github.json  config_personal.json  config_uplevel.json  config_uptodate.json  config_validlink.json
src/facere_sensum/: facere_sensum.py  fs.py  test.py
src/facere_sensum/connectors/: customsearch.py  uplevel.py  uptodate.py  user.py  validlink.py
src/facere_sensum/connectors/GitHub/: _github.py  fork.py  star.py  watch.py
src/facere_sensum/sources/: customsearch.py  uptodate.py
src/facere_sensum/sources/GitHub/: _github.py  fork.py
test/: ref.csv  ref_base.csv  sitecustomize.py  test.py
test/connectors/: t_user.py
test/input/: config_uplevel_notfound.json  customsearch.json
test/output/: ref_base.csv  ref_updated.csv
test/t_connectors/: t_customsearch.py  t_uplevel.py  t_uptodate.py  t_user.py  t_validlink.py
test/t_connectors/GitHub/: t_fork.py  t_star.py  t_watch.py
test/t_sources/: t_customsearch.py  t_uplevel.py  t_uptodate.py  t_user.py
test/t_sources/GitHub/: t_fork.py  t_star.py  t_watch.py
