[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facere-sensum"
dynamic = ["version"]
authors = [
  { name = "Serge Lunev" },
]
description = "facere-sensum: make sense of the turmoil"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lunarserge/facere-sensum"
"Bug Tracker" = "https://github.com/lunarserge/facere-sensum/issues"

[tool.hatch.version]
path = "src/facere_sensum/facere_sensum.py"