[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "facere-sensum"
dynamic = [
    "version",
    "dependencies"
]
authors = [
  { name = "Serge Lunev" },
]
description = "facere-sensum: make sense of the turmoil"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lunarserge/facere-sensum"
"Bug Tracker" = "https://github.com/lunarserge/facere-sensum/issues"

[project.scripts]
facere-sensum = "facere_sensum.fs:main"

[tool.hatch.version]
path = "src/facere_sensum/fs.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]